# LangLeaf

./: .gitignore  README.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
backend/: cors.py  database.py  models.py
frontend/: bot.py  text.py  wordsapi.py
